# computer_vision_model

./: README.md  YamlLoader.py  batch_0_cam.pkl  batch_0_per_sample_loss.pkl  batch_0_per_step_info.pkl  cam_object.pkl  config.py  data.yaml  dependency_resolver.py  main.py  pyproject.toml  requirements.txt  run.py  run_on_frame.py  run_utils.py
.zen/: config.yaml
annotations/: annotation.py  birds_eye.py  draw.py  paths.py
datasets/: match_info_cam_gt.json
experiments/hparams/: hparams.yml
football-id-2-7/test/: _annotations.coco.json
football-id-2-7/valid/: _annotations.coco.json
game/: __init__.py  ball.py  draw.py  match.py  pass_event.py  player.py  possession.py  referee.py  team.py
homography/: compute_homography.py  homography_utils.py
homography/calibration/: cam_modules.py  data_loader.py  import_data.py  module.py  (+1 more)
inference/: SahiDetector.py  __init__.py  ball_detector.py  base_classifier.py  converter.py  detector.py  detector_utils.py  filters.py  hsv_classifier.py  inertia_classifier.py  nn_classifier.py  nn_model.py  nn_model_utils.py  object_detector.py  sahi.py  sahi_ball_detector.py  sahi_detector.py  sahi_person_detector.py  split_detector.py  yolov5.py
materializers/: __init__.py  team_materializer.py  video_materializer.py  yolo_model_materializer.py
nueralnet/: nn_model.py
soccer/: ball.py  match.py  pass_event.py  player.py  player2.py  referee.py
steps/: config.py  frame_loop.py  instantiate_match.py  load_annotators.py  load_classifier.py  load_detectors.py  load_stats.py  load_tracker.py
training/: segmentation.py
(+109 files in other folders)
